mobile responsive + icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			AGAINST THE WORLD
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-		<link rel="icon" type="image/png" href=" ">
+		<link rel="icon" type="image/png" href="imgs/icon.png">
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 	</head>
 	
@@ -79,6 +79,7 @@
 				<div class="topRight">
 					but that won't convince her, no,<br>
 					she will never believe;<br>
+					<div class="linebreak"></div>
 					that she's as hopeless as some<br>
 					people believe her to be.
 				</div>
@@ -94,6 +95,7 @@
 				<div class="topLeft">
 					but that won't stop her, no,<br>
 					she doesn't dare give up;<br>
+					<div class="linebreak"></div>
 					and let them convince her<br>
 					that she's nowhere to run.
 				</div>
@@ -108,9 +110,10 @@
 			<div class="section" id="page_8">
 				<div class="center">
 					For they have each other to count on,<br>
-against the very world they live on;<br>
-And even when they seem alone,<br>
-they know the other will come along,<br>
+					against the very world they live on;<br>
+					<div class="linebreak"></div>
+					And even when they seem alone,<br>
+					they know the other will come along,<br>
 				</div>
 			</div>
 		</a>
@@ -138,6 +141,7 @@ they know the other will come along,<br>
 				<div class="center">
 					she'll protect her even if she has to fight,<br>
 					and assure her she's always shining bright.<br>
+					<div class="linebreak"></div>
 					And when she doesn't feel alright,<br>
 					she'll always feel safe by her side<br>
 				</div>
@@ -147,6 +151,7 @@ they know the other will come along,<br>
 				<div class="center">
 					she'll protect her even if she has to fight,<br>
 					and assure her she's always shining bright.<br>
+					<div class="linebreak"></div>
 					And when she doesn't feel alright,<br>
 					she'll always feel safe by her side<br>
 				</div>
@@ -156,6 +161,7 @@ they know the other will come along,<br>
 				<div class="center">
 					she'll protect her even if she has to fight,<br>
 					and assure her she's always shining bright.<br>
+					<div class="linebreak"></div>
 					And when she doesn't feel alright,<br>
 					she'll always feel safe by her side<br>
 				</div>
@@ -166,6 +172,7 @@ they know the other will come along,<br>
 			<div class="section" id="page_11">
 				<div class="center">
 					for they will forever remain intertwined, <br>
+					<div class="linebreak"></div>
 					where in each other, both their hearts reside.
 				</div>
 			</div>
@@ -173,6 +180,7 @@ they know the other will come along,<br>
 			<div class="section" id="page_11b">
 				<div class="center">
 					for they will forever remain intertwined, <br>
+					<div class="linebreak"></div>
 					where in each other, both their hearts reside.
 				</div>
 			</div>
